ecmascript/parser/tests/typescript-errors/tsc/decorators/invalid/decoratorOnFunctionExpression/input.ts.stderr
error: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/decorators/invalid/decoratorOnFunctionExpression/input.ts:3:26
  |
3 | var F = @dec function () {
  |                          ^

